--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harshit's Portfolio</title>
-    <link rel="stylesheet" href="aboutMe.css">
+    <link rel="stylesheet" href="style.css">
     
 
 </head>
@@ -138,6 +138,6 @@
       
     </div>
 </div>
-    <script src="aboutMe.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
